# void-box

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE1_IMPLEMENTATION.md  README.md  SECURITY.md  nfpm.yaml
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: bump-agents.yml  ci.yml  codeql.yml  e2e-azure-diagnostics.yml  e2e-macos.yml  e2e.yml  guest-image.yml  pages.yml  release-images.yml  release.yml  startup-bench.yml
benches/: network.rs  startup.rs
claudio/: Cargo.toml  README.md
claudio/src/: main.rs
docs/: AGENT.md  GETTING_STARTED.md  alignment.md  architecture.md  claude_code_interface.md  event_model.md  guest_image.md  logo_ascii.md  network_analysis.md  observability.md  onboarding.md  openclaw_oci_refactor.md  passt-comparison.md  perf-architectural-experiments.md  persistence.md  release-digests.md  rfc-interactive-terminal.md  sandbox_capabilities.md  slirp-networking-implementation.md  vm0_crates_exploration.md  vm0_network_exploration.md  vsock-connection-timeout-fix.md  war-histories.md  workflows.md
docs/adr/: 0001-adopt-rfc-adr-process.md  0002-host-held-credentials-injection-proxy.md  0003-shared-low-privilege-proxy.md  0004-per-run-proxy-isolation.md  0004-per-sandbox-proxy-isolation.md  0005-egress-per-run-profile-model.md  0005-egress-per-sandbox-profile-model.md  0006-vz-in-guest-ebpf-egress-enforcement.md  0007-aarch64-guest-memory-map.md  0007-vz-credential-proxy-gateway-bind.md  0008-per-platform-device-discovery.md  README.md  template.md
docs/agents/: claude.md  codex.md  doc-style.md
docs/design/: IMPLEMENTATION_PLAN.md  credential-broker.md  egress-policy.md
docs/diagrams/: component-overview.excalidraw  host-guest-protocol.excalidraw  security-layers.excalidraw
docs/rfc/: 0001-rfc-adr-process.md  0002-guest-network-egress-and-credential-containment.md  0003-aarch64-kvm-guest-platform.md  README.md  template.md
docs/testing/: credential-proxy-m1b.md
docs/vhs/: onboard.tape
examples/: README.md  boot_diag.rs  claude_in_voidbox_example.rs  claude_workflow.rs  code_review_agent.rs  crr_concurrent_bench.rs  crr_singleproc_bench.rs  lm_studio_local.rs  ollama_local.rs  parallel_pipeline.rs  quick_demo.rs  remote_skills.rs  snapshot_restore.rs  trading_pipeline.rs
examples/code_review/: code_review_agent.yaml
examples/common/: mod.rs
examples/hackernews/: hackernews_agent.yaml
examples/openclaw/: README.md  node_version.yaml  openclaw_install_smoke.yaml  openclaw_telegram.yaml  openclaw_telegram_lmstudio.yaml  openclaw_telegram_ollama.yaml
examples/smoke/: smoke.yaml
examples/specs/: agent.json  codex_smoke.yaml  codex_workflow_smoke.yaml  credential_proxy_claude.yaml  credential_proxy_claude_personal.yaml  credential_proxy_codex.yaml  credential_proxy_codex_chatgpt.yaml  credential_proxy_custom.yaml  interactive_claude.yaml  pipeline.yaml  sandbox_claude_personal.yaml  smoke_claude_personal.yaml  smoke_test.yaml  snapshot_pipeline.yaml  snapshot_restore.yaml  startup_cross_check.yaml  voidbox-pipeline-personal.yaml  workflow.yaml
guest-agent/: Cargo.toml
guest-agent/src/: fs_guard.rs  main.rs  pty.rs
playground/: README.md  docker-compose.yml  playground_pipeline.rs  up.sh
scripts/: bench-compare-pasta.py  bench-compare.sh  bench-pasta.py  bench-qemu-slirp.sh  build-initramfs.sh  build_agents_rootfs.sh  build_claude_rootfs.sh  build_codex_rootfs.sh  build_guest_image.sh  build_guest_oci.sh  build_release_artifacts.sh  build_slim_kernel.sh  build_test_image.sh  download_kernel.sh  extract-vmlinux  install.sh  logo_to_ascii.sh  playground_up.sh  run_kvm_tests.sh  run_voidbox_macos.sh  sign-macos.sh  test_credential_proxy_codex_v1.sh  test_credential_proxy_m1b.sh  test_credential_proxy_v1.sh
scripts/agents/: manifest.toml
scripts/guest/: claude-code-mock.sh
scripts/lib/: agent_manifest.sh  agent_rootfs_common.sh  guest_common.sh  guest_linux.sh  guest_macos.sh  kernel_pin.sh
site/: index.html
site/docs/: index.html
site/guides/: index.html
skills/: portfolio-risk-management.md  quant-technical-analysis.md
src/: agent_box.rs  artifacts.rs  credentials.rs  daemon.rs  daemon_listen.rs  error.rs  image.rs  lib.rs  llm.rs  persistence.rs  pipeline.rs  runtime.rs  skill.rs  snapshot_store.rs  spec.rs
src/backend/: control_channel.rs  kvm.rs  mod.rs  multiplex.rs  pty_session.rs
src/devices/: mod.rs  serial.rs  virtio_9p.rs  virtio_blk.rs  virtio_net.rs  virtio_vsock.rs  virtio_vsock_mmio.rs  virtio_vsock_userspace.rs  virtqueue.rs  vsock_backend.rs  vsock_connection.rs
src/guest/: mod.rs  protocol.rs
src/network/: epoll_dispatch.rs  mod.rs  nat.rs  slirp.rs  uring.rs
src/observe/: claude.rs  codex.rs  host_metrics.rs  logs.rs  metrics.rs  mod.rs  otlp.rs  telemetry.rs  tracer.rs
src/proxy/: ca.rs  injector.rs  mod.rs  provision.rs  server.rs  ssrf.rs  token.rs
src/sandbox/: local.rs  mod.rs
tests/: agent_manifest.rs  codex_oauth_real_upstream.rs  codex_provisioning_harness.rs  conformance.rs  daemon_auth.rs  daemon_unix_perms.rs  daemon_unix_round_trip.rs  daemon_unix_unlink.rs  e2e_pty.rs  e2e_skill_pipeline.rs  e2e_telemetry.rs  integration.rs  kvm_integration.rs  network_baseline.rs  oauth_real_upstream.rs  observe_codex.rs  oci_integration.rs  orchestration_contract.rs  otel_integration.rs  persistent_channel.rs  proxy.rs  proxy_real_upstream.rs  sidecar_integration.rs  sidecar_unit.rs  skill_pipeline.rs  snapshot_integration.rs  snapshot_vz_integration.rs  telemetry.rs
tools/: qemu-init.sh
void-box-protocol/: Cargo.toml
void-mcp/: Cargo.toml
void-mcp/src/: http.rs  jsonrpc.rs  main.rs  tools.rs
void-mcp/tests/: integration.rs
void-message/: Cargo.toml
void-message/src/: main.rs
void-message/tests/: integration.rs
voidbox-oci/: Cargo.toml
voidbox-oci/src/: cache.rs  error.rs  layer.rs  lib.rs  manifest.rs  registry.rs  unpack.rs
(+112 files in other folders)
