[package]
name = "void-box"
version = "0.1.0"
edition = "2021"
authors = ["Diego Parra <diegolparra@gmail.com>"]
description = "Composable workflow sandbox with KVM micro-VMs and native observability"
repository = "https://github.com/the-void-ia/void-box"
readme = "README.md"
keywords = ["sandbox", "workflow", "observability", "virtualization", "kvm"]
categories = ["development-tools", "virtualization"]
exclude = [
    "target/*",
    "artifacts/*",
    "docs/vhs/*",
    ".cursor/*",
    "scripts/build_*",
    "tmp/*",
]

[dependencies]
# rust-vmm core
kvm-ioctls = "0.19"
kvm-bindings = { version = "0.10", features = ["fam-wrappers"] }
vm-memory = { version = "0.17", features = ["backend-mmap"] }
vmm-sys-util = "0.12"
linux-loader = { version = "0.13", features = ["bzimage", "elf"] }

# Virtio devices
virtio-queue = "0.14"
virtio-bindings = "0.2"
vm-superio = "0.8"
event-manager = "0.4"

# SLIRP networking (smoltcp-based user-mode networking)
smoltcp = { version = "0.11", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "socket-dns"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability (KEY DIFFERENTIATOR) -- OpenTelemetry 0.31
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace", "metrics", "internal-logs"], optional = true }

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
void-box-protocol = { path = "void-box-protocol" }
libc = "0.2"
nix = { version = "0.29", features = ["fs", "ioctl", "net", "socket", "event"] }
byteorder = "1"

[dev-dependencies]
regex-lite = "0.1.9"
tempfile = "3"
tokio-test = "0.4"
# OTel testing support (in-memory exporters for assertions)
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", features = ["testing"] }

[features]
default = []
# Enable full OpenTelemetry integration (OTLP export, trace context propagation)
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[[bin]]
name = "voidbox"
path = "src/bin/voidbox.rs"

[workspace]
members = ["guest-agent", "void-box-protocol", "claudio"]

# guest-agent builds as a tiny static init binary for the guest initramfs.
# Use `cargo build -p guest-agent --release` with these workspace-level settings.
# Per-package profile only supports opt-level; for full size optimization
# (lto, strip), build with: CARGO_PROFILE_RELEASE_LTO=true cargo build ...
[profile.release.package.guest-agent]
opt-level = "z"

[profile.release.package.claudio]
opt-level = "z"
