[package]
name = "guest-agent"
version = "0.1.0"
edition = "2021"
description = "Guest agent for void-box VMs - runs as init process"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mount", "process", "socket"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
