[package]
name = "void-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP stdio server for void-box sidecar messaging"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
void-box = { path = ".." }
tokio = { version = "1", features = ["full"] }
